# techvscats

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README.ru.md  database.qrc  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  music.qrc  resources.qrc  techvscats.pro
.github/workflows/: ci.yml
Controller/: AbstractController.h  Controller.cpp  Controller.h  Enemy.cpp  Enemy.h  GameObject.h  MovingObject.h  Spawner.cpp  Spawner.h  abstract_controller.h  controller.cpp  controller.h  enemy.cpp  enemy.h  movingobject.h  multiplayer_client.cpp  multiplayer_client.h  music_player.cpp  music_player.h  spawner.cpp  spawner.h
GameObject/: ActiveTower.cpp  ActiveTower.h  Building.h  Enemy.h  GameObject.h  MovingObject.h  PassiveTower.cpp  PassiveTower.h  Projectile.cpp  Projectile.h  abstract_projectile.cpp  abstract_projectile.h  active_tower.cpp  active_tower.h  aimed_projectile.cpp  aimed_projectile.h  auric_field.cpp  auric_field.h  base.cpp  base.h  bomb_projectile.cpp  bomb_projectile.h  building.cpp  building.h  default_tower.cpp  default_tower.h  effect.cpp  effect.h  empty_tower.cpp  empty_tower.h  enemy.cpp  enemy.h  fast_tower.cpp  fast_tower.h  game_object.cpp  game_object.h  homing_projectile.cpp  homing_projectile.h  laser_projectile.cpp  laser_projectile.h  (+18 more)
Model/: AbstractModel.h  Coordinate.h  Model.cpp  Model.h  Road.cpp  Road.h  Wave.h  constants.h  coordinate.cpp  coordinate.h  enemy_group.h  model.cpp  model.h  music_player.cpp  music_player.h  road.cpp  road.h  server_message.cpp  server_message.h  size.cpp  size.h  sound_vector.cpp  sound_vector.h  spawner.cpp  spawner.h  wave.h  сoordinate.h
Server/: echoserver.cpp  echoserver.h  main.cpp  message.cpp  message.h  server.cpp  server.h  server.pro  server_message.cpp  server_message.h  serverr.pro
View/: AbstractView.h  View.cpp  View.h  animation_player.cpp  animation_player.h  build_option.cpp  build_option.h  button_handler.cpp  button_handler.h  global_chat.cpp  global_chat.h  info_field.cpp  info_field.h  menu_button.cpp  menu_button.h  particle.h  particle_handler.cpp  particle_handler.h  size_handler.cpp  size_handler.h  text_notification.cpp  text_notification.h  tower_menu.cpp  tower_menu.h  tower_menu_option.cpp  tower_menu_option.h  view.cpp  view.h
android/: AndroidManifest.xml  build.gradle  google-services.json  release_notes.txt
resources/database/: database.json  description_en_US.json  description_ru_RU.json  server_en_US.json  server_ru_RU.json  titles.TXT  titles.txt
resources/levels/: level_1.json  level_2.json  level_3.json
resources/translations/: translation_en_US.qm  translation_en_US.ts  translation_ru_RU.qm  translation_ru_RU.ts
